k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ninemm-frontend
  labels:
    app: pulsex-migrator
    environment: production
