k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: migrator
  namespace: ninemm-frontend
  labels:
    app: pulsex-migrator
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: pulsex-migrator
